removed forward slashes to see if website deploys

--- a/contact.html
+++ b/contact.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
-    <link rel="stylesheet" href="/croissant/css/styles.css">
+    <link rel="stylesheet" href="croissant/css/styles.css">
 </head>
 <body>
     <h2>📧 Contact Us</h2>
     <p>To contact, please email at <a href="mailto:madeupemail@email.com">madeupemail@email.com</a> for more information!</p>
     <footer>
-        <a href="/croissant/index.html">Homepage</a>
-        <a href="/croissant/photo.html">Photo</a>
+        <a href="croissant/index.html">Homepage</a>
+        <a href="croissant/photo.html">Photo</a>
     </footer>
 </body>
 </html>
