readded forward slashes

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="croissant/css/styles.css">
+    <link rel="stylesheet" href="/croissant/css/styles.css">
     <title>Homepage</title>
 </head>
 <body>
     <h1>🥐Croissants👩‍🍳</h1>
     <p>What do you like about croissants? Is it the buttery goodness? Or the fact that some of them come with 🍫chocolate in them?  </p>
     <footer>
-    <a href="croissant/photo.html">Photo</a>
-    <a href="croissant/contact.html">Contact</a>
+    <a href="/croissant/photo.html">Photo</a>
+    <a href="/croissant/contact.html">Contact</a>
     </footer>
 </body>
 </html>
