--- a/photo.html
+++ b/photo.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photo</title>
-    <link rel="stylesheet" href="croissant/css/styles.css">
+    <link rel="stylesheet" href="/croissant/css/styles.css">
 </head>
 <body>
     <h2>Yummy!😋</h2>
     <footer>
-        <a href="croissant/index.html">Homepage</a>
-        <a href="croissant/contact.html">Contact</a>
+        <a href="/croissant/index.html">Homepage</a>
+        <a href="/croissant/contact.html">Contact</a>
     </footer>
-    <img src="croissant/images/croissant.jpg" alt="" width="350px">
+    <img src="/croissant/images/croissant.jpg" alt="" width="350px">
 </body>
 </html>
